--- a/inset-core/build.gradle
+++ b/inset-core/build.gradle
@@ -1,5 +1,5 @@
 version '1.0.0'
 
 dependencies {
-    compileOnlyApi 'com.github.slatepowered.veru:veru-java8:2a28b07'
+    api 'com.github.slatepowered.veru:veru-java8:2a28b07'
 }
