--- a/inset-mongodb/build.gradle
+++ b/inset-mongodb/build.gradle
@@ -5,4 +5,6 @@ dependencies {
     implementation project(":inset-bson")
 
     api 'org.mongodb:mongodb-driver-sync:4.1.1'
+
+    testImplementation project(":inset-caffeine")
 }
