--- a/inset-mongodb/build.gradle
+++ b/inset-mongodb/build.gradle
@@ -6,5 +6,5 @@ dependencies {
 
     api 'org.mongodb:mongodb-driver-sync:4.1.1'
 
-    testImplementation project(":inset-caffeine")
+//    testImplementation project(":inset-caffeine")
 }
